--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ h3 {
 .card--banner {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   margin-bottom: -1rem;
   border-bottom: 1px solid #cbcbcb;
 }
