correct bg color

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background-color: #eff2ff;
+  background-color: #f8f8ff;
   color: #1e1e1e;
   overflow-x: hidden;
   font-size: 16px;
