updated card color

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ button:focus {
 
 .card {
   border-radius: 8px;
-  background-color: #f8f8f8;
+  background-color: #fcfcfc;
   overflow: hidden;
   margin-top: 1rem;
   transition: all 0.1s;
